[gd_scene load_steps=18 format=2]

[ext_resource path="res://pictures/gui/player_interaction.tres" type="TileSet" id=1]
[ext_resource path="res://MiscCodes/Tilemap_CameraView.gd" type="Script" id=3]
[ext_resource path="res://MiscCodes/TouchScreenButton.gd" type="Script" id=4]
[ext_resource path="res://MiscCodes/KinematicBody2D.gd" type="Script" id=5]
[ext_resource path="res://Other/base_tilemap/init.gd" type="Script" id=6]
[ext_resource path="res://pictures/gui/buttons/LeftButton.png" type="Texture" id=7]
[ext_resource path="res://pictures/gui/buttons/instellingen2.png" type="Texture" id=8]
[ext_resource path="res://pictures/gui/buttons/map.png" type="Texture" id=9]
[ext_resource path="res://pictures/gui/buttons/inventory.png" type="Texture" id=10]
[ext_resource path="res://pictures/gui/buttons/TopButtonPressed.png" type="Texture" id=11]
[ext_resource path="res://pictures/gui/buttons/LeftButtonPressed.png" type="Texture" id=12]
[ext_resource path="res://pictures/gui/buttons/TopButton.png" type="Texture" id=13]
[ext_resource path="res://pictures/gui/buttons/crafting_alchemy.png" type="Texture" id=14]
[ext_resource path="res://pictures/surroundings/bomen/boom_stand3.png" type="Texture" id=15]
[ext_resource path="res://pictures/gui/buttons/quick_item_button.png" type="Texture" id=16]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0

[sub_resource type="CircleShape2D" id=2]

[node name="base_scene" type="Node2D"]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 705.297, 1197.88 )
z_index = 15
z_as_relative = false
current = true
limit_left = 0
limit_top = 0
limit_right = 4800
limit_bottom = 4800
script = ExtResource( 3 )

[node name="Interactive" type="Node2D" parent="Camera2D"]
position = Vector2( -705.297, -1197.88 )

[node name="MiscButtons" type="TouchScreenButton" parent="Camera2D/Interactive"]
visible = false
position = Vector2( 272.559, 948.524 )
scale = Vector2( 13.402, 62.475 )
z_index = 12
normal = ExtResource( 13 )
action = "ui_end"
script = ExtResource( 1 )

[node name="GameButtons" type="Node2D" parent="Camera2D/Interactive"]

[node name="Inventory" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 88, 898 )
scale = Vector2( 1.25, 1.25 )
z_index = 13
z_as_relative = false
normal = ExtResource( 10 )
action = "inventory_button"

[node name="Crafting" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 1183, 1360 )
scale = Vector2( 1.25, 1.25 )
z_index = 13
z_as_relative = false
normal = ExtResource( 14 )

[node name="Settings" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 1183, 899.159 )
scale = Vector2( 1.25, 1.25758 )
z_index = 13
z_as_relative = false
normal = ExtResource( 8 )

[node name="Map" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 88, 1360 )
scale = Vector2( 1.25, 1.25 )
z_index = 13
z_as_relative = false
normal = ExtResource( 9 )

[node name="QuickItems" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
visible = false
position = Vector2( 1130.11, 1096.88 )
scale = Vector2( 1.73434, 1.80493 )
z_index = 13
z_as_relative = false
normal = ExtResource( 16 )

[node name="MoveDown" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 226.909, 1360.02 )
scale = Vector2( 14.9409, 17.3527 )
z_index = 11
z_as_relative = false
normal = ExtResource( 13 )
pressed = ExtResource( 11 )
shape_centered = false
action = "move_down"
visibility_mode = 1
script = ExtResource( 4 )

[node name="MoveRight" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 1182.93, 1038.62 )
scale = Vector2( 17.5925, 5.01865 )
z_index = 11
z_as_relative = false
normal = ExtResource( 7 )
pressed = ExtResource( 12 )
action = "move_right"
visibility_mode = 1
script = ExtResource( 4 )

[node name="MoveUp" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 226.043, 899.343 )
scale = Vector2( 14.9551, 17.1621 )
z_index = 11
z_as_relative = false
normal = ExtResource( 13 )
pressed = ExtResource( 11 )
action = "move_up"
visibility_mode = 1
script = ExtResource( 4 )

[node name="MoveLeft" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 89.342, 1035.02 )
scale = Vector2( 17.1589, 5.08181 )
z_index = 11
z_as_relative = false
normal = ExtResource( 7 )
pressed = ExtResource( 12 )
shape_centered = false
action = "move_left"
visibility_mode = 1
script = ExtResource( 4 )

[node name="dev_statistics" type="MarginContainer" parent="Camera2D"]
margin_left = -617.0
margin_top = -300.0
margin_right = 612.0
margin_bottom = 297.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_stats" type="Label" parent="Camera2D/dev_statistics"]
margin_top = 291.0
margin_right = 1229.0
margin_bottom = 305.0

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 700, 1200 )
z_index = 1
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 15 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )
one_way_collision_margin = 96.0

[node name="MapInteraction" type="TouchScreenButton" parent="Player/CollisionShape2D"]
show_behind_parent = true
position = Vector2( -150, -150 )
scale = Vector2( 15, 15 )
z_index = 11
shape = SubResource( 2 )
action = "map_interaction"

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="Camera2D/Interactive/GameButtons/MoveDown" to="Player" method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Camera2D/Interactive/GameButtons/MoveRight" to="Player" method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Camera2D/Interactive/GameButtons/MoveUp" to="Player" method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Player/CollisionShape2D/MapInteraction" to="Player" method="_interaction_process"]
[connection signal="tween_completed" from="Tween" to="Camera2D" method="_on_Tween_tween_completed"]
